[package]
authors = [
  "Manuel Mauro <manuel.mauro@protonmail.com>",
  "Ivan Schuetz <ivanhp978@gmail.com>",
]
description = "A Rusty sdk for the Algorand blockchain."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.3.0"

[workspace]
members = [
  "algonaut_client",
  "algonaut_model",
  "algonaut_core",
  "algonaut_crypto",
  "algonaut_encoding",
  "algonaut_transaction",
]

[dependencies]
algonaut_client = { path = "algonaut_client", version = "0.3.0", default-features = false }
algonaut_model = { path = "algonaut_model", version = "0.3.0" }
algonaut_core = { path = "algonaut_core", version = "0.3.0" }
algonaut_crypto = { path = "algonaut_crypto", version = "0.3.0" }
algonaut_encoding = { path = "algonaut_encoding", version = "0.3.0" }
algonaut_transaction = { path = "algonaut_transaction", version = "0.3.0" }
thiserror = "1.0.23"
rmp-serde = "1.0.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] }
data-encoding = "2.3.1"
cucumber = "0.13.0"
async-trait = "0.1.51"

[features]
default = ["native"]
native = ["algonaut_client/native"]
rustls = ["algonaut_client/rustls"]

[[test]]
name = "features_runner"
# Allows Cucumber to print output instead of libtest
harness = false          
