[package]
authors = [
  "Manuel Mauro <manuel.mauro@protonmail.com>",
  "Ivan Schuetz <ivanhp978@gmail.com>",
]
description = "A Rusty sdk for the Algorand blockchain."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.4.2"

[workspace]
members = [
  "algonaut_client",
  "algonaut_model",
  "algonaut_core",
  "algonaut_crypto",
  "algonaut_encoding",
  "algonaut_transaction",
  "algonaut_abi",
]

[dependencies]
algonaut_client = { path = "algonaut_client", version = "0.4.2", default-features = false }
algonaut_model = { path = "algonaut_model", version = "0.4.2" }
algonaut_core = { path = "algonaut_core", version = "0.4.2" }
algonaut_crypto = { path = "algonaut_crypto", version = "0.4.2" }
algonaut_encoding = { path = "algonaut_encoding", version = "0.4.2" }
algonaut_transaction = { path = "algonaut_transaction", version = "0.4.2" }
algonaut_abi = { path = "algonaut_abi", version = "0.4.2" }
log = "0.4.0"
env_logger = "0.9.0"
thiserror = "1.0.23"
rmp-serde = "1.0.0"
num-traits = "0.2.14"
num-bigint = "0.4.3"
futures-timer = "3.0.2"
instant = { version = "0.1", features = ["now"] }
data-encoding = "2.3.1"
sha2 = "0.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.2.4", features = ["futures"] }
instant = { version = "0.1", features = ["now", "wasm-bindgen"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] }
cucumber = "0.19.0"
async-trait = "0.1.51"

[features]
default = ["native"]
native = ["algonaut_client/native"]
rustls = ["algonaut_client/rustls"]

[[test]]
name = "features_runner"
# Allows Cucumber to print output instead of libtest
harness = false
