[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "Application Binary Interface (ABI) to invoke smart contract methods with a standarized interface."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_abi"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.3.0"

[dependencies]
algonaut_core = {path = "../algonaut_core", version = "0.3.0"}
serde = {version = "1.0", features = ["derive"]}
regex = "1.5.5"
lazy_static = "1.4.0"
sha2 = "0.10.1"
derive_more = "0.99.13"
thiserror = "1.0.23"
num-bigint = "0.4.3"

[dev-dependencies]
serde_json = "1.0.40"
rand = "0.8.5"
num-bigint = { version = "0.4.3", features = ["rand"] }
