[package]
name = "algonaut_client"
version = "0.1.0"
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algonaut_encoding = { path = "../algonaut_encoding", version = "0.1.0", default-features = false }
algonaut_core = { path = "../algonaut_core", version = "0.1.0", default-features = false }
algonaut_crypto = { path = "../algonaut_crypto", version = "0.1.0", default-features = false }
algonaut_transaction = { path = "../algonaut_transaction", version = "0.1.0", default-features = false }
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking", "json"]}
url = "2.2.0"
derive_more = "0.99.11"
thiserror = "1.0.23"
rmp-serde = "0.14.0"
serde_json = "1.0.40"

[dev-dependencies]
dotenv = "0.15.0"
rand = "0.8.3"
