[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
description = "API clients for the Algorand blockchain."
documentation = "https://docs.rs/algonaut_client"
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_client"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.2.0"

[dependencies]
algonaut_core = {path = "../algonaut_core", version = "0.2.0"}
algonaut_crypto = {path = "../algonaut_crypto", version = "0.2.0"}
algonaut_encoding = {path = "../algonaut_encoding", version = "0.2.0"}
algonaut_transaction = {path = "../algonaut_transaction", version = "0.2.0"}
data-encoding = "2.3.1"
derive_more = "0.99.13"
reqwest = {version = "0.11", features = ["json"]}
rmp-serde = "0.14.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.40"
thiserror = "1.0.23"
url = "2.2.0"
async-trait = "0.1.50"

[dev-dependencies]
dotenv = "0.15.0"
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] }
tokio = { version = "1.6.0", features = ["macros"] }
