[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "Core structs for the Algorand blockchain."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_core"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.4.2"

[dependencies]
algonaut_crypto = {path = "../algonaut_crypto", version = "0.4.2"}
algonaut_encoding = {path = "../algonaut_encoding", version = "0.4.2"}
data-encoding = "2.3.1"
derive_more = "0.99.13"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10.1"
static_assertions = "1.1.0"
rmp-serde = "1.0.0"
thiserror = "1.0.23"
ring = "0.16.19"

[dev-dependencies]
rand = "0.8.3"
