[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
edition = "2018"
name = "algonaut_encoding"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.1"
serde = {version = "1.0", features = ["derive"]}
