[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_encoding"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.1.2"

[dependencies]
data-encoding = "2.3.1"
serde = {version = "1.0", features = ["derive"]}
