[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "Encoding utilities for the Algorand blockchain."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_encoding"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.3.0"

[dependencies]
data-encoding = "2.3.1"
serde = {version = "1.0", features = ["derive"]}
