[package]
name = "algonaut_indexer"
version = "0.4.2"
authors = ["OpenAPI Generator team and contributors"]
description = "Algorand ledger analytics API."
# Override this license by providing a License Object in the OpenAPI.
license = "MIT"
edition = "2021"

[dependencies]
algonaut_crypto = { path = "../algonaut_crypto", version = "0.4.2" }
algonaut_encoding = { path = "../algonaut_encoding", version = "0.4.2" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
