[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "Model objects"
documentation = "https://docs.rs/algonaut_client"
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_model"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.2.0"

[dependencies]
algonaut_core = {path = "../algonaut_core", version = "0.2.0"}
algonaut_crypto = {path = "../algonaut_crypto", version = "0.2.0"}
algonaut_encoding = {path = "../algonaut_encoding", version = "0.2.0"}
algonaut_transaction = {path = "../algonaut_transaction", version = "0.2.0"}
data-encoding = "2.3.1"
# derive_more = "0.99.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.40"
