[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
description = "Implementation of the Algorand blockchain transaction set."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_transaction"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.2.0"

[dependencies]
algonaut_core = {path = "../algonaut_core", version = "0.2.0"}
algonaut_crypto = {path = "../algonaut_crypto", version = "0.2.0"}
algonaut_encoding = {path = "../algonaut_encoding", version = "0.2.0"}
data-encoding = "2.3.1"
derive_more = "0.99.11"
rand = "0.8.3"
reqwest = {version = "0.11", features = ["blocking", "json"]}
ring = "0.16.19"
rmp-serde = "0.14.0"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1.0.40"
sha2 = "0.8.0"
thiserror = "1.0.23"
url = "2.2.0"
