[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "Implementation of the Algorand blockchain transaction set."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_transaction"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.3.0"

[dependencies]
algonaut_core = {path = "../algonaut_core", version = "0.3.0"}
algonaut_crypto = {path = "../algonaut_crypto", version = "0.3.0"}
algonaut_encoding = {path = "../algonaut_encoding", version = "0.3.0"}
data-encoding = "2.3.1"
derive_more = "0.99.13"
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] }
ring = "0.16.19"
rmp-serde = "0.15.5"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
sha2 = "0.9.5"
thiserror = "1.0.23"
url = "2.2.0"
urlencoding = "2.0.0-alpha.1"
num-traits = "0.2.14"
